[project]
name = "code"
version = "0.0.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "hatchling",
    "maturin",
    "tuna==0.5.11",
    "yt-dlp",
    "zensical",
]

[tool.uv]
torch-backend = "auto"
exclude-newer = "7 days"
python-preference = "only-managed"

[tool.uv.exclude-newer-package]
torch       = false
torchaudio  = false
torchvision = false
triton      = false
zensical    = false

[tool.uv.workspace]
members = ["meta/*/*"]
exclude = ["**/nvibrant"]

[tool.uv.sources]
dearlog    = {workspace=true}
depthflow  = {workspace=true}
hook       = {workspace=true}
parsenaut  = {workspace=true}
pyaket     = {workspace=true}
rustman    = {workspace=true}
shaderflow = {workspace=true}
smartdirs  = {workspace=true}

[[tool.uv.dependency-metadata]]
name = "omnivoice"
requires-dist = []

# Do Not Touch My Formatting!
[tool.ruff.format]
exclude = ["*"]

[tool.ruff.lint]
ignore = [
    "E402", # Late/runtime imports are ok for torch
    "E701", # Rarely, this looks better than new line
    "E731", # Lambdas can be more readable at times
    "E741", # Don't tell the electrical engineers
    "F401", # Init files may re-export 'unused' stuff..
    "F403", # Star imports can be useful at times
    "F405", # You can find star objects why complain
    "F541", # Useful in multi-line f-strings..
]
