[project]
name = "code"
version = "1.0"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "hatchling",
    "maturin",
    "meson",
    "ninja",
    "poethepoet",
    "tuna",
    "yt-dlp",
    "zensical",
]

[tool.uv]
link-mode = "hardlink"
exclude-newer = "7 days"
python-preference = "only-managed"

# Fixme: uv sync doesn't use backends
torch-backend = "auto"
exclude-dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
]

[tool.poe.tasks.sync]
sequence = [
  {cmd = "uv sync --all-packages --inexact $POE_EXTRA_ARGS"},
  {cmd = "uv pip install torchvision torchaudio torch"},
]

[tool.uv.exclude-newer-package]
torch       = false
torchaudio  = false
torchvision = false
triton      = false
zensical    = false

[tool.uv.workspace]
members = ["code/*/*"]
exclude = ["**/nvibrant"]

[tool.uv.sources]
dearlog    = {workspace=true}
depthflow  = {workspace=true}
parsenaut  = {workspace=true}
pyaket     = {workspace=true}
rustman    = {workspace=true}
shaderflow = {workspace=true}
smartdirs  = {workspace=true}

[[tool.uv.dependency-metadata]]
name = "omnivoice"
requires-dist = []

# Pure virtual package
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["__nothing__"]
exclude  = ["*"]

[tool.hatch.build.targets.sdist]
exclude = ["*"]

# Get out of my swamp!
[tool.ruff.format]
exclude = ["*"]

[tool.ruff.lint]
ignore = [
    "E402", # Late/runtime imports are ok for torch
    "E701", # Rarely, this looks better than new line
    "E731", # Lambdas can be more readable at times
    "E741", # Don't tell the electrical engineers
    "F401", # Init files may re-export 'unused' stuff..
    "F403", # Star imports can be useful at times
    "F405", # You can find star objects why complain
    "F541", # Useful in multi-line f-strings..
]
